2013-03-25	Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* include/rgxg/number.h, src/range.h:
	  - added missing 'extern' keyword to function declarations
	* include/rgxg/utils.h, src/escape.h, src/alternation.h:
	  - added missing parameter names to function declarations
	* lib/number.c:
	  - use 'lib/common_macros.h'
	* m4/lib_version.m4, README:
	  - added note about libtool version
	* include/rgxg/number.h, lib/number.c, src/range.c, man/rgxg.1:
	  - rgxg_number_greaterequal: fixed bug with leading zeros
	  - added 'min_length' parameter to 'rgxg_number_range'
	    and 'rgxg_number_greaterequal' functions
	  - added '-m' option to 'range' command

2013-03-24	Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* +include/rgxg/utils.h, +lib/utils.c,
	  +lib/common_macros.h, Makefile.am:
	  - provide 'rgxg_utils_escape_string' function
	  - provide 'rgxg_utils_alternation' function
	* src/main.c, src/range.h, src/range.c:
	  - include 'range.h' in 'range.c'
	  - fixed return type of 'set_default' and 'print_help' functions
	* +src/escape.h, +src/escape.c, +src/alternation.h, +src/alternation.c,
	  +src/common_macros.h, src/main.c, Makefile.am:
	  - provide 'escape' and 'alternation' command

2013-03-21	Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* include/rgxg/number.h, lib/number.c, src/range.c:
	  - changed type of input numbers to 'long long'
	* configure.ac:
	  - use 'AC_PROG_CC_C99' instead of AC_PROG_CC

2013-03-15	Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Initial version